- added published document link

--- a/reference/Swiggy-API.v1.yaml
+++ b/reference/Swiggy-API.v1.yaml
@@ -17,6 +17,9 @@ info:
 
     Tech Doc WIP:
     https://docs.google.com/document/d/1iNwiCwg_EwADbm3OkInJ-4fKr_Squ_j-7_FoEPs8I0k/
+
+    API Published Document:
+    https://stoplight.io/p/docs/gh/spd-git/swiggyapi
   contact:
     name: Sudeep Patil
     email: sudeep@getvymo.com
